--- a/Theme_Group_2/Twitch.theme.css
+++ b/Theme_Group_2/Twitch.theme.css
@@ -3,7 +3,7 @@
 /* Primary Color: #6441a5,  Primary Transparent Color: rgb(100, 65, 165)*/
 /* Secondary Color: #4e3380  Secondary Transparent Color: rgb(78, 51, 128) */
 
-.app {
+#app-mount {
   background-image: url(https://www.lffl.org/wp-content/uploads/2016/08/twitch.jpg);
   background-size: cover;
   background-position: center;
@@ -17,7 +17,7 @@
 .channels-Ie2l6A,
 .container-PNkimc,
 .theme-dark .typing-2GQL18,
-.theme-dark #friends,
+.theme-dark .container-3gCOGc,
 .container-2lgZY8,
 .theme-dark .standardSidebarView-3F1I7i {
   background-color: transparent;
@@ -761,12 +761,12 @@
   font-weight: 400;
 }
 
-.tooltip.tooltip-black {
+.tooltip-1OS-Ti.black-2bmmnj {
   background: linear-gradient(155deg, #000000, #6441a5);
   /*Primary Color*/
 }
 
-.tooltip {
+.tooltip-1OS-Ti {
   position: absolute;
   text-align: center;
   color: white;
@@ -775,27 +775,27 @@
   text-shadow: rgba(0, 0, 0, 0.69) 1px 1px 5px;
 }
 
-.tooltip.tooltip-red.tooltip {
+.tooltip-1OS-Ti.red-m6f4-H.tooltip-1OS-Ti {
   background-color: rgba(255, 0, 0, 0.32);
 }
 
-.tooltip.tooltip-red.tooltip-right:after {
+.tooltip-1OS-Ti.red-m6f4-H.right-KM_vfY:after {
   border-right: none;
 }
 
-.tooltip.tooltip-black.tooltip-top:after {
+.tooltip-1OS-Ti.black-2bmmnj.top-1pTh1F:after {
   border-top: none;
 }
 
-.tooltip.tooltip-black.tooltip-bottom:after {
+.tooltip-1OS-Ti.black-2bmmnj.bottom-19kp6S:after {
   border-bottom: none;
 }
 
-.tooltip.tooltip-black.tooltip-left:after {
+.tooltip-1OS-Ti.black-2bmmnj.left-1wV7VO:after {
   border-left: none;
 }
 
-.tooltip.tooltip-black.tooltip-right:after {
+.tooltip-1OS-Ti.black-2bmmnj.right-KM_vfY:after {
   border-right: none;
 }
 
@@ -1017,13 +1017,13 @@
   background-color: #4fc90b;
 }
 
-.search-bar {
+.searchBar-2_Yu-C {
   background-color: rgba(0, 0, 0, 0.12);
   border-radius: 0;
   box-shadow: none;
 }
 
-.app .welcomeMessage-3_Mcht h1 {
+#app-mount .welcomeMessage-3_Mcht h1 {
   color: silver;
 }
 
@@ -1416,22 +1416,22 @@
 }
 
 .emojiPicker-3m1S-j .stickyHeader-1SS0JU,
-.bda-dark .emoji-picker .header .search-bar, .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
+.bda-dark .emoji-picker .header .searchBar-2_Yu-C, .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .searchBar-2_Yu-C {
   background: transparent;
 }
 
-.search-bar.search-bar-light {
+.searchBar-2_Yu-C.searchBarLight-1NxoDG {
   background-color: transparent;
 }
 
-.search-bar.search-bar-light .search-bar-inner {
+.searchBar-2_Yu-C.searchBarLight-1NxoDG .searchBarInner-1_Tg2R {
   background-color: rgba(0, 0, 0, .3);
   border: none;
   border-radius: 0!important;
   box-shadow: none; 
 }
 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #pubs-container .scroller::-webkit-scrollbar, .bda-dark #pubs-container .scroller::-webkit-scrollbar-track, .bda-dark #pubs-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece,.bda-dark .emoji-picker .scroller::-webkit-scrollbar, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
+.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #pubs-container .scroller::-webkit-scrollbar, .bda-dark #pubs-container .scroller::-webkit-scrollbar-track, .bda-dark #pubs-container .scroller::-webkit-scrollbar-track-piece, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece,.scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-dark .scrollerWrap-2lJEkd.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scroller-2FKFPG::-webkit-scrollbar-track, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp.scrollerTrack-1ZIpsv>.scrollerStore-390omS::-webkit-scrollbar-track,.bda-dark .emoji-picker .scroller::-webkit-scrollbar, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
   background-color: transparent !important;
   border: none !important;
 }
@@ -1462,7 +1462,7 @@
   background-color: rgba(255, 255, 255, .12);
 }
 
-.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-thumb, .bda-dark emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb, .bda-dark #pubs-container .scroller::-webkit-scrollbar-thumb,.scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb {
+.bda-dark #bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, .bda-dark #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-light .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb {
   background-color: #6441a5;
   /*Primary Color*/
   border-radius: 0;
@@ -1474,12 +1474,12 @@
   /*Secondary Color*/
 }
 
-.theme-dark .messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-track-piece {
+.theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-track-piece {
   background-color: transparent;
   border-color: transparent;
 }
 
-.theme-dark .messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-thumb {
+.theme-dark .scrollerThemed-2oenus.themedWithTrack-q8E3vB .scroller-2FKFPG::-webkit-scrollbar-thumb {
   background-color: #6441a5;
   /*Primary Color*/
   border-radius: 0;
@@ -1567,14 +1567,14 @@
 
 .theme-dark .header-ykumBX,
 .theme-dark .footer-1kmXd4,
-.theme-dark .search-results-wrap .search-header {
+.theme-dark .searchHeader-1l-wpR {
   background-color: transparent;
   box-shadow: none;
   border-radius: 0;
 }
 
 .theme-dark .messagesPopoutWrap-1MQ1bW,
-.theme-dark .search-results-wrap {
+.theme-dark .searchResultsWrap-2DKFzt {
   border-radius: 0;
   background-color: #6441a5;
   /*Primary Color*/
@@ -1588,8 +1588,8 @@
   color: white;
 }
 
-.theme-dark .search-results-wrap .empty-results-wrap,
-.theme-dark .search-results-wrap .error-wrap {
+.theme-dark .searchResultsWrap-2DKFzt .empty-results-wrap,
+.theme-dark .searchResultsWrap-2DKFzt .error-wrap {
   color: white;
 }
 
@@ -1627,7 +1627,7 @@
 }
 
 .theme-dark .jumpButton-3DTcS_,
-.theme-dark .search-results-wrap .action-buttons .jump-button {
+.theme-dark .jumpButton-Ia2hRJ {
   background-color: #6441a5;
   /*Primary Color*/
   color: white;
@@ -1638,12 +1638,12 @@
   color: #6cf430;
 }
 
-.theme-dark .search-results-wrap .search-result:before,
-.theme-dark .search-results-wrap .search-result:after {
+.theme-dark .searchResult-3pzFAB:before,
+.theme-dark .searchResult-3pzFAB:after {
   background: none;
 }
 
-.theme-dark .search-results-wrap .channel-separator:before {
+.theme-dark .channelSeparator-1X1FuH:before {
   border-color: transparent;
 }
 
@@ -1654,26 +1654,26 @@
   overflow: visible;
 }
 
-.theme-dark .search-results-wrap .search-result .search-result-message.hit {
+.theme-dark .searchResultsWrap-2DKFzt .searchResult-3pzFAB .searchResultMessage-2VxO12.hit-NLlWXA {
   border: none;
 }
 
-.theme-dark .search-results-wrap .search-result .hit {
+.theme-dark .searchResultsWrap-2DKFzt .searchResult-3pzFAB .hit-NLlWXA {
   background-color: rgba(0, 0, 0, 0.64);
   box-shadow: none;
 }
 
-.theme-dark .search-results-wrap .search-result.expanded {
+.theme-dark .searchResultsWrap-2DKFzt .searchResult-3pzFAB.expanded-v2Szsz  {
   border: none;
 }
 
-.theme-dark .search-results-wrap .search-result.expanded .search-result-message.hit {
+.theme-dark .searchResultsWrap-2DKFzt .expanded-v2Szsz .searchResultMessage-2VxO12.hit-NLlWXA {
   background-color: rgba(0, 0, 0, 0.64);
   border: none;
   border: 1px solid #adf650;
 }
 
-.theme-dark .search-results-wrap .channel-separator .channel-name {
+.theme-dark .channelSeparator-1X1FuH .channelName-1QajIf {
   background-color: rgba(0, 0, 0, 0.34);
   padding: 5px 7px;
 }
@@ -2144,19 +2144,19 @@
   /*Secondary Color*/
 }
 
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
   background: #6441a5;
   /*Primary Color*/
   text-shadow: 0 0 4px black;
 }
 
-.theme-dark #friends .friends-table .friend-table-add-wrapper .friend-table-suggestions-header,
-.theme-dark #friends .friends-table .friends-table-header,
-.theme-dark #friends .friends-table .friends-row+.friends-row {
+.theme-dark .friendsTable-133bsv .friendTableAddWrapper-nHHZtK .friendTableSuggestionsHeader-2zSnpD,
+.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d,
+.theme-dark .friendsTable-133bsv .friendsRow-2yicud+.friendsRow-2yicud {
   border: none;
 }
 
-.theme-dark #friends .friends-table .friend-table-add-wrapper .friend-table-add-header {
+.theme-dark .friendsTable-133bsv .friendTableAddWrapper-nHHZtK .friendTableAddHeader-m9bzFr {
     background: linear-gradient(179deg,rgba(71, 0, 128,.3), rgba(0,0,0,.3));
     border-bottom: none;
 }
@@ -2166,12 +2166,12 @@
     border-color: transparent;
 }
 
-.theme-dark #friends .tab-bar .tab-bar-separator,
-.theme-dark #friends .friends-table .friends-table-header .friends-column-separator {
+.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumnSeparator-3MqtMA,
+.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumnSeparator-3MqtMA {
     background-color: transparent;
 }
 
-.theme-dark #friends .friends-table .friends-table-header .friends-column {
+.theme-dark .friendsTable-133bsv .friendsTableHeader-32yE7d .friendsColumn-eVHFqJ {
     color: white;
 }
 
@@ -2183,50 +2183,50 @@
     text-transform: capitalize;
 }
 
-.theme-dark #friends .tab-bar .tab-bar-item:hover:not(.selected) {
+.theme-dark .topPill-30KHOu .item-PXvHYJ:hover:not(.itemSelected-1qLhcL) {
     background-color: rgba(0,0,0,0.67);
 }
 
-.theme-dark #friends .tab-bar .tab-bar-item,
-.theme-dark #friends .friends-empty p {
+.theme-dark .container-3gCOGc .tab-bar .tab-bar-item,
+.theme-dark .container-3gCOGc .friends-empty p {
     color: white;
 }
 
-.theme-dark #friends .friends-table .friends-row .friends-column-name,
-.theme-dark #friends .friends-table .friends-row .friends-column-status {
+.theme-dark .container-3gCOGc .friends-table .friends-row .friends-column-name,
+.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnStatus-ZH4ho2 {
     color: white;
 }
 
-.theme-dark #friends .friends-table .friends-row .avatar-small {
+.theme-dark .container-3gCOGc .friends-table .friends-row .avatar-small {
     width: 35px;
     height: 35px;
     transition: width .6s, height .6s;
     background-size: cover;
 }
 
-.theme-dark #friends .friends-table .friends-row:hover .avatar-small {
+.theme-dark .friendsTable-133bsv .friendsRow-2yicud:hover .avatar-small {
     width: 75px;
     height: 75px;
 }
 
-.theme-dark #friends .friends-table .friends-row:hover {
+.theme-dark .friendsTable-133bsv .friendsRow-2yicud:hover {
     padding: 44px 26px;
     background-color: rgba(0,0,0,0.24);
     border: 1px solid rgb(100, 65, 165);
     /*Primary Color*/
 }
 
-.theme-dark #friends .friends-table .friends-row .friends-column-actions .friends-action {
+.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9 {
     background-color: #6441a5;
     /*Primary Color*/
 }
 
-.theme-dark #friends .friends-table .friends-row .friends-column-actions .friends-action:hover {
+.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9:hover {
     background-color: #4e3380;
     /*Secondary Color*/
 }
 
-#friends .friends-table .friends-row .friends-column-actions .friends-action.friends-action-remove:hover {
+.friendsTable-133bsv .friendsRow-2yicud .friendsColumnActions-1LT3_M .friendsAction-__WNE9.friendsActionRemove-qu8nnl:hover {
     background-color: #df4338!important;
 } 
 
@@ -2236,24 +2236,24 @@
     background-color: transparent;
 }
 
-.theme-dark #friends .friends-table .friends-row .friends-column-guilds .more-mutual-guilds-btn:hover {
+.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnGuilds-2we6jb .moreMutualGuildsBtn-2VwbkO:hover {
     border-color: rgba(255,255,255,0.12);
     color: white;
     background-color: #5c23d2;
 }
 
 
-.theme-dark #friends .friends-table .friends-row .friends-column-guilds .more-mutual-guilds-btn {
+.theme-dark .friendsTable-133bsv .friendsRow-2yicud .friendsColumnGuilds-2we6jb .moreMutualGuildsBtn-2VwbkO {
     border-color: #5c23d2;
     color: #5c23d2;
 }
 
-.theme-dark #friends .tab-bar .tab-bar-item.selected {
+.theme-dark .topPill-30KHOu .itemSelected-1qLhcL {
     background-color: rgba(78, 51, 128,.5); /*Secondary Transparent Color*/
     color: white;
 }
 
-.theme-dark #friends .tab-bar .tab-bar-item.selected .badge,
+.theme-dark .topPill-30KHOu .itemSelected-1qLhcL .badge,
 #friends .tab-bar-item .wrapper-232cHJ.betterfriendcount-badge {
     background-color: #6441a5;
     color: white;
@@ -2264,20 +2264,20 @@
     text-shadow: 0 0 4px rgba(0,0,0,1),0 0 4px rgba(0,0,0,1);
 }
 
-.theme-dark #friends .tab-bar .tab-bar-item.tab-bar-item-primary:hover:not(.selected) {
-    background-color: #4e3380;
+.tabBar-1E2ExX .primary-3j8BhM:hover:not(.selected) {
+    background-color: #4e3380  !important;
     /*Secondary Color*/
 }
 
-.theme-dark #friends .tab-bar .tab-bar-item.tab-bar-item-primary {
-    background-color: #6441a5;
+.tabBar-1E2ExX .primary-3j8BhM {
+    background-color: #6441a5  !important;
     /*Primary Color*/
-    color: #fff;
+    color: #fff  !important;
 }
 
-.theme-dark #friends .tab-bar .tab-bar-item.tab-bar-item-primary.selected {
-    background-color: #470080;
-    color: white;
+.tabBar-1E2ExX .primarySelected-3uHKZn {
+    background-color: #470080  !important;
+    color: white  !important;
 }
 
 /* Channel Members */ 
